vendored_parsers/tree-sitter-kotlin/test/corpus/statements.txt
==================
For statements
==================

for (value in values) {}

---

(source_file
  (for_statement
    (variable_declaration (simple_identifier))
    (simple_identifier)
    (control_structure_body)))

==================
Statements separated by semicolon
==================

override fun isDisposed(): Boolean { expectUnreached();  return false }

---

(source_file
  (function_declaration
    (modifiers
      (member_modifier))
    (simple_identifier)
    (user_type
      (type_identifier))
    (function_body
      (statements
        (call_expression
          (simple_identifier)
          (call_suffix
            (value_arguments)))
        (jump_expression
          (boolean_literal))))))

